--- a/index.html
+++ b/index.html
@@ -20,6 +20,20 @@
                 Discover the benefits of data analytics and make better decisions regarding revenue, customer
                 experience, and overall efficiency.
             </p>
+            <div class="card-value">
+                <p class="company-value">
+                    10k+
+                    <span class="value-name">COMPANIES</span>
+                </p>
+                <p class="template-value">
+                    314
+                    <span class="value-name">TEMPLATES</span>
+                </p>
+                <p class="queries-value">
+                    12M+
+                    <span class="value-name">QUERIES</span>
+                </p>
+            </div>
         </div>
         <img src="./image/bitmap.png" alt="Personnes qui travaillent sur un bureau">
     </main>
